# http-proxy-ipv6-balancer

./: Cargo.toml
.github/workflows/: ci.yml
configs/: config.toml
deploy/: Dockerfile  docker-bake.hcl  docker-compose.yml
src/: main.rs
src/skeleton/: conf.rs  ipv6.rs  mod.rs  serve.rs  service.rs
