[package]
name = "http-proxy-ipv6-balancer"
version = "0.1.0"
edition = "2021"
authors = [
    "Homing So <i@homing.so>"
]
description = "A HTTP proxy balancer for IPv6"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.8"
futures-util = "0.3"
ipnet = { version = "2", features = ["serde"] }

argh = { version = "0.1.13" }
glob = { version = "0.3.1" }
notify = { version = "7.0.0" }
config = { version = "0.15.0", features = ["ini", "json", "yaml", "toml", "json5"] }
serde = { version = "1", features = ["derive"] }

tokio = { version = "1.42", features = ["io-util", "rt-multi-thread", "signal"] }
hyper = { version = "1" }
hyper-util = "0.1"
tower = { version = "0.5" }
axum = { version = "0.7.9" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
